update tech report

--- a/assignment_2/da3_a2_technical_report.html
+++ b/assignment_2/da3_a2_technical_report.html
@@ -193,7 +193,7 @@ pre code {
 </div>
 <div id="data-preparation" class="section level1">
 <h1>Data Preparation</h1>
-<p>Data preparation includes mainly three parts: Data Cleaning, Label Engineearing, and Feature Engineearing. (Please find more details on <a href="https://github.com/xibei-chen/DA3/blob/main/assignment_2/montreal_20211211_cleaner.R">Cleaner R script</a>)</p>
+<p>Data preparation includes mainly three parts: Data Cleaning, Label Engineering, and Feature Engineering. (Please find more details on <a href="https://github.com/xibei-chen/DA3/blob/main/assignment_2/montreal_20211211_cleaner.R">Cleaner R script</a>)</p>
 <div id="data-cleaning" class="section level3">
 <h3>Data Cleaning</h3>
 <p>Filter Observations:</p>
@@ -301,7 +301,7 @@ price
 <li>amenities includes amenities_general, home_appliance_brands, beauty_care_brands, baby_children_friendly, digital_entertainment, outdoor_facilities;</li>
 <li>host_verifications.</li>
 </ul>
-<p>And I put the following symbols to indicate what type the varible is.</p>
+<p>And I put the following symbols to indicate what type the variable is.</p>
 <ul>
 <li>“d_”: dummy variables, includes also “d_missing” which means flag variable for missing value;</li>
 <li>“f_”: factor variables;</li>
