--- a/assignment_2/da3_a2_technical_report.html
+++ b/assignment_2/da3_a2_technical_report.html
@@ -1119,7 +1119,7 @@ All
 </div>
 <div id="conclusion" class="section level1">
 <h1>Conclusion</h1>
-<p>Among 7 OLS models, Lasso and Random Forest, Random Forest has the best prediction performance. By robustness check, I found out by excluding apartments with extreme value prices, prediction performance can be improved significantly. So given that the properties of our company are normal apartments without extraordinary features, I would use Random Forest on data without extreme values of price for prediction. However, we still keep in mind that depending on the location and features the properties of our company, we might have different prediction performance.</p>
+<p>Among 7 OLS models, Lasso and Random Forest, Random Forest has the best prediction performance. By robustness check, I found out by excluding apartments with extreme value prices, prediction performance can be improved significantly. So given that the properties of our company are normal apartments without extraordinary features, I would use Random Forest on data without extreme values of price for prediction. Besides, we should keep in mind that depending on the location and features the properties of our company, we might have different prediction performance. Last but not least, improving amenities, host verification, availability, and other features might enable us to set a relative higher price to generate higher profit for our business.</p>
 </div>
 
 
